# naylence-agent-sdk-python

./: .gitignore  README.md  build_docker.sh  build_docker_advanced.sh  debug_mock.py  debug_state.py  demo_state_api.py  pyproject.toml
.github/workflows/: publish-docker-advanced.yml  publish-docker.yml  publish-to-pypi.yml  test.yml
docker/: Dockerfile  Dockerfile.advanced-security  README.advanced-security.md  README.md
docs/: advanced-security-versioning.md
docs/api/: _meta.js  page.mdx
docs/api/classes/: _meta.js
docs/api/classes/Agent/: page.mdx
docs/api/classes/AgentException/: page.mdx
docs/api/classes/AgentProxy/: page.mdx
docs/api/classes/Artifact/: page.mdx
docs/api/classes/AuthorizationException/: page.mdx
docs/api/classes/BackgroundTaskAgent/: page.mdx
docs/api/classes/BaseAgent/: page.mdx
docs/api/classes/BaseAgentState/: page.mdx
docs/api/classes/ConflictException/: page.mdx
docs/api/classes/DataPart/: page.mdx
docs/api/classes/DuplicateTaskException/: page.mdx
docs/api/classes/FilePart/: page.mdx
docs/api/classes/InvalidDataException/: page.mdx
docs/api/classes/InvalidTaskException/: page.mdx
docs/api/classes/Message/: page.mdx
docs/api/classes/NoDataFoundException/: page.mdx
docs/api/classes/Task/: page.mdx
docs/api/functions/: _meta.js
docs/api/other/: _meta.js
examples/gateway/: README.md  __init__.py  common.py  main.py  math_agent.py
examples/quickstart/: hello.py
scripts/: __init__.py  generate_docs.py  release.sh
src/naylence/agent/: configs.py  dev_mode.py
tests/naylence/agent/: test_basic.py
(+16 files in other folders)
