[project]
name = "naylence-agent-sdk"
version = "0.1.2"
description = "Naylence Agent SDK"
authors = [
    {name = "naylencedev@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
packages = [
  { include = "naylence", from = "src"},
]

[tool.poetry.dependencies]
naylence-runtime = "^0.1.61"
naylence-advanced-security = "^0.1.6"

[tool.poetry.group.api.dependencies]
fastapi = "^0.115.12"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.12"

pytest-asyncio = "^1.0.0"
pytest = "^8.3.5"
isort = "^6.0.1"

[tool.poetry.group.examples.dependencies]
python-dotenv = "^1.0.0"
openai = "^1.82.1"
pillow = "^10.2.0"  # For image processing
aiohttp = "^3.9.3"  # For async HTTP requests
numpy = "^2.3.0"
asyncpg = "^0.30.0"
mcp = "^1.10.1"

[tool.poetry.extras]
dev = [
  "black",
  "ruff",
  "pytest-asyncio",
  "pytest",
  "mcp",
]

# Package sources: allow fallback to TestPyPI for packages that
# don't exist on PyPI yet (e.g., naylence-factory while in early testing).
[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple"
priority = "supplemental"


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ".:tests"
pythonpath = "."

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
